src/objects/QPMS__Incident_information__c.object
<CustomObject>
    <description>Incident information</description>
    <fields>
        <fullName>QPMS__Address_complement_Initial_reporter__c</fullName>
        <description>Address complement</description>
        <inlineHelpText>Address complement</inlineHelpText>
        <label>Address complement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Annex_D_incident_is_unique__c</fullName>
        <description>If you think the incident is unique and a suitable IMDRF term is missing, briefly explain:</description>
        <inlineHelpText>If you think the incident is unique and a suitable IMDRF term is missing, briefly explain:</inlineHelpText>
        <label>If you think the incident is unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Body_weight_kg__c</fullName>
        <description>Body weight (kg)</description>
        <inlineHelpText>Body weight (kg)</inlineHelpText>
        <label>Body weight (kg)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__City_name_Initial_reporter__c</fullName>
        <description>City name</description>
        <inlineHelpText>City name</inlineHelpText>
        <label>City name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintId__c</fullName>
        <description>Complaint Id</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Complaint__c</formula>
        <label>ComplaintId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_first_name_Initial_reporter__c</fullName>
        <description>Contact’s first name</description>
        <inlineHelpText>Contact’s first name</inlineHelpText>
        <label>Contact’s first name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Contact_s_last_name_initial_reporter__c</fullName>
        <description>Contact’s last name</description>
        <inlineHelpText>Contact’s last name</inlineHelpText>
        <label>Contact’s last name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Country_initial_reporter__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Current_location_of_the_device__c</fullName>
        <label>Current location of the device?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare facility/carer</fullName>
                </value>
                <value>
                    <fullName>Patient/user</fullName>
                </value>
                <value>
                    <fullName>In transit to manufacturer</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Remains implanted</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Current_location_other__c</fullName>
        <description>Other</description>
        <inlineHelpText>Other</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Email_initial_reporter__c</fullName>
        <description>Email_initial_reporter</description>
        <inlineHelpText>Email_initial_reporter</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Number__c</fullName>
        <description>Follow Up Number</description>
        <formula>TEXT( QPMS__Regulatory_Report__r.QPMS__Follow_Up_Number__c )</formula>
        <label>Follow Up Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Gender__c</fullName>
        <description>Gender</description>
        <inlineHelpText>Gender</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Healthcare_facility_report_number__c</fullName>
        <description>Healthcare facility report number (if applicable)</description>
        <inlineHelpText>Healthcare facility report number (if applicable)</inlineHelpText>
        <label>Healthcare facility report number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Incident_Description__c</fullName>
        <description>Incident Description</description>
        <inlineHelpText>Incident Description</inlineHelpText>
        <label>Incident Description</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__List_any_of_the_patient_s_prior_health__c</fullName>
        <description>List any of the patient&apos;s prior health</description>
        <inlineHelpText>List any of the patient&apos;s prior health</inlineHelpText>
        <label>List any of the patient&apos;s prior health</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Name_of_healthcare_facility__c</fullName>
        <description>Name of healthcare facility where incident occurred</description>
        <inlineHelpText>Name of healthcare facility where incident occurred</inlineHelpText>
        <label>Name of healthcare facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Number_of_patients_involved__c</fullName>
        <description>Number of patients involved</description>
        <inlineHelpText>Number of patients involved</inlineHelpText>
        <label>Number of patients involved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Operator_of_device__c</fullName>
        <description>Operator of device</description>
        <inlineHelpText>Operator of device</inlineHelpText>
        <label>Operator of device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare professional</fullName>
                </value>
                <value>
                    <fullName>Patient/lay user</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Operator_of_device_other__c</fullName>
        <description>Operator_of_device_other</description>
        <inlineHelpText>Operator_of_device_other</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Box_Initial_reporter__c</fullName>
        <description>PO Box</description>
        <inlineHelpText>PO Box</inlineHelpText>
        <label>PO Box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Phone_initial_reporter__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>QPMS__Postal_code_Initial_reporter__c</fullName>
        <description>Postal code</description>
        <inlineHelpText>Postal code</inlineHelpText>
        <label>Postal code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>Regulatory Body</description>
        <formula>QPMS__Regulatory_Report__r.QPMS__Regulatory_Body__c</formula>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>holds Regulatory Report value</description>
        <label>Regulatory Report</label>
        <referenceTo>QPMS__Regulatory_Report__c</referenceTo>
        <relationshipLabel>Incident informations</relationshipLabel>
        <relationshipName>Incident_informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Remedial_actions_taken_by_healthcare__c</fullName>
        <description>Remedial actions taken by healthcare</description>
        <inlineHelpText>Remedial actions taken by healthcare</inlineHelpText>
        <label>Remedial actions taken by healthcare</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Role_of_initial_reporter__c</fullName>
        <description>Role of initial reporte</description>
        <inlineHelpText>Role of initial reporte</inlineHelpText>
        <label>Role of initial reporter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare professional</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Lay user</fullName>
                </value>
                <value>
                    <fullName>Other, please specify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Role_of_initial_reporter_other__c</fullName>
        <description>Other</description>
        <inlineHelpText>Other</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_initial_reporter__c</fullName>
        <description>Street</description>
        <inlineHelpText>Street</inlineHelpText>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Street_number_Initial_reporter__c</fullName>
        <description>Street number</description>
        <inlineHelpText>Street number</inlineHelpText>
        <label>Street number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Usage_of_device_as_intended__c</fullName>
        <description>Usage of device (as intended)</description>
        <inlineHelpText>Usage of device (as intended)</inlineHelpText>
        <label>Usage of device (as intended)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a reusable medical device</fullName>
                </value>
                <value>
                    <fullName>Problem noted prior use</fullName>
                </value>
                <value>
                    <fullName>Reuse of a single use medical device</fullName>
                </value>
                <value>
                    <fullName>Re-serviced/refurbished/fully refurbished</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Usage_of_device_other__c</fullName>
        <description>Other</description>
        <inlineHelpText>Other</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__days__c</fullName>
        <description>days</description>
        <inlineHelpText>days</inlineHelpText>
        <label>days</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__months__c</fullName>
        <description>months</description>
        <inlineHelpText>months</inlineHelpText>
        <label>months</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__years__c</fullName>
        <description>years</description>
        <inlineHelpText>years</inlineHelpText>
        <label>years</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Incident information</label>
    <nameField>
        <label>Incident information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>